# PowerOfCleanCpp

./: CMakeLists.txt  LICENSE  README.md  Token.cpp  Wrapper.cpp  main.cpp  sonar-project.properties
.github/workflows/: build.yml
